--- a/src/client/components/App.css
+++ b/src/client/components/App.css
@@ -1,8 +1,6 @@
-.area {
-    outline: 3px solid rgb(235, 235, 235);
+#other {
     display: flex;
     flex-wrap: wrap;
-    width: 300px;
-    margin: auto;
+    margin: 10px;
     user-select: none;
   }
