--- a/src/client/components/App.css
+++ b/src/client/components/App.css
@@ -1,6 +1,24 @@
+#app {
+  display: inline-block;
+}
+
+#real {
+  margin: auto;
+  padding: 5px;
+}
+
 #other {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 10px;
-    user-select: none;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
+  padding: 5px;
+  user-select: none;
+}
+
+#button {
+  display: grid;
+}
+
+button {
+  margin: auto;
+}
