--- a/src/client/components/Grid.css
+++ b/src/client/components/Grid.css
@@ -1,4 +1,4 @@
-.game {
+.grid {
     outline: 3px solid rgb(235, 235, 235);
     display: flex;
     flex-wrap: wrap;
@@ -6,10 +6,10 @@
     user-select: none;
   }
 
-.game.real {
+.grid.real {
   width: 300px;
 }
 
-.game.other {
+.grid.other {
   width: 50px;
 }
