--- a/src/client/components/App.css
+++ b/src/client/components/App.css
@@ -1,24 +1,34 @@
-#app {
-  display: inline-block;
+.App {
+  text-align: center;
+}
+#app{
+  min-height: 100%;
+  background-color: #C62828;
 }
 
-#real {
-  margin: auto;
-  padding: 5px;
+.App-logo {
+  height: 40vmin;
 }
 
-#other {
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-  flex-wrap: wrap;
-  margin: 5px;
-  padding: 5px;
-  user-select: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-#button {
-  display: grid;
+.App-link {
+  color: #09d3ac;
 }
 
-button {
+a {
+  text-decoration: none;
+}
+
+.mx-auto{
   margin: auto;
 }
