--- a/src/client/components/App.css
+++ b/src/client/components/App.css
@@ -1,10 +1,7 @@
 .App {
   text-align: center;
 }
-#app{
-  min-height: 100%;
-  background-color: #C62828;
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -31,4 +28,13 @@ a {
 
 .mx-auto{
   margin: auto;
+}
+
+#content{
+  background-color: white;
+  min-height: 100%;
+  height: 100vh;
+  border-left: 1.5rem solid red;
+  border-right: 1.5rem solid red;
+
 }
