--- a/src/client/components/Tail.css
+++ b/src/client/components/Tail.css
@@ -19,6 +19,19 @@
     width:15px;
 }
 
+@media all and (max-height: 700px){
+    .tail.real {
+      height: 20px;
+    }
+    .tail.piece {
+      height: 10px;
+      width:10px;
+    }
+    .tail.other {
+      width: 10px;
+    }
+  }
+
 .tail.red {
     background: #ff4444;
 }
