--- a/src/client/components/App.css
+++ b/src/client/components/App.css
@@ -29,12 +29,20 @@ a {
 .mx-auto{
   margin: auto;
 }
-
 #content{
   background-color: white;
   min-height: 100%;
   height: 100vh;
-  border-left: 1.5rem solid red;
-  border-right: 1.5rem solid red;
-
+  border-left: 1.5rem  double red;
+  border-right: 1.5rem  double red;
 }
+
+@media all and (max-width: 575px){
+  #content {
+    border:0;
+    padding:0;
+  }
+}
+
+
+
