--- a/src/client/components/Game.css
+++ b/src/client/components/Game.css
@@ -24,3 +24,19 @@ button {
   margin: auto;
   width: 200px;
 }
+
+#content{
+  background-color: white;
+  min-height: 100%;
+  height: 100vh;
+  border-left: 1.5rem  double red;
+  border-right: 1.5rem  double red;
+}
+
+@media all and (max-width: 575px){
+  #content {
+    border:0;
+    padding:0;
+  }
+}
+
