--- a/src/client/components/Game.css
+++ b/src/client/components/Game.css
@@ -27,8 +27,8 @@ button {
 
 #content{
   background-color: white;
-  min-height: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   border-left: 1.5rem  double red;
   border-right: 1.5rem  double red;
 }
